--- a/source/css/all.css.scss
+++ b/source/css/all.css.scss
@@ -5,113 +5,14 @@ $nav: #32393D;
 $line: #EC6A47;
 
 @import "bootstrap";
-
-@mixin b-line-top {
-  box-shadow: inset 0 2px 0 0 $line;
-}
-
-@mixin b-line-buttom {
-  box-shadow: inset 0 -2px 0 0 $line;
-}
-
-html{
-  height: 100%;
-}
-
-body {
-  /* background-color: white; */
-  background-color: $back;
-  height: 100%;
-  font-size: 14px;
-  line-height: 1.8em;
-}
-
-li {
-  list-style: outside none none;
-}
-
-header {
-  font-size: 14px;
-  font-weight: bold;
-  @include b-line-buttom;
-}
-
-section{
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-@mixin box-item {
-  background-color: white;
-  display: block;
-  margin-bottom: 30px;
-  @media (min-width: $screen-sm-min) {
-    margin-bottom: 60px;
-  }
-}
-
-// header
-#nav-right {
-  a {
-    &:hover {
-      @include b-line-buttom;
-    }
-  }
-}
-
-.navbar {
-  opacity: 0.7;
-  transition: all 1s ease;
-  &:hover{
-    opacity: 1.0;
-  }
-  margin: 0 0;
-  @include b-line-buttom;
-}
-
-.navbar-brand {
-  font-weight: bold;
-  font-size: 150%;
-}
-
-// footer
-#footer {
-  background: $nav;
-  width: 100%;
-  min-height: 200px;
-  color: white;
-  img {
-    width: 40px;
-    height: 40px;
-  }
-  a {
-    text-decoration: none;
-    color: white;
-    &:hover{
-      color: $line;
-    }
-  }
-  .footer-share{
-    margin-right: 10px;
-    margin-left: 10px;
-    background: white;
-    &:hover{
-      border: solid 2px $line;
-      margin: -2px 9px;
-      background-color: white;
-    }
-  }
-}
-
-#footer-info {
-  margin-top: 50px;
-  display: block;
-  text-align: center;
-  @media (min-width: $screen-md-min) {
-    margin-top: 120px;
-    text-align: left;
-  }
-}
+@import "base";
+@import "footer";
+@import "header";
+@import "pagetop";
+@import "top";
+@import "listpage";
+@import "shoplist";
+@import "eventlist";
 
 #asn {
   padding-top: 20px;
@@ -120,250 +21,8 @@ section{
   }
 }
 
-#copy {
-  p {
-    text-align: center;
-    margin-top: 20px;
-    padding-top: 15px;
-    @include b-line-top;
-  }
-}
-
 #asn-share {
   text-align: right;
-}
-
-// ページTOP
-.top-img {
-  background: url('../images/a2.jpg') no-repeat fixed center 0 / cover transparent;
-  display: block;
-  min-height: 90%;
-  width: 100%;
-  position: relative;
-}
-
-.main-title{
-  border-left: 5px solid $line;
-  margin-top: 25%;
-  background-color: rgba(63, 63, 79, 0.8);
-  color: #fff;
-  max-width: 720px;
-  padding: 20px 20px 30px;
-  @media (min-width: $screen-md-min) {
-    position: absolute;
-    left: 4%;
-    bottom: 30%;
-  }
-  h1,h2{
-    font-weight: bold;
-  }
-  h1{
-    font-weight: 50px;
-    line-height: 45px;
-  }
-}
-
-
-// トップページ
-#top {
-}
-
-#top-sponsers {
-  text-align: center;
-  display: block;
-  margin-top: 20px;
-  padding-bottom: 100px;
-  margin-bottom: 50px;
-  background-color: white;
-  .row {
-    margin-right: 0;
-  }
-  h2 {
-    font-weight: bold;
-  }
-  ul {
-    @include box-item;
-    margin-top: 70px;
-    margin-left: -20px;
-  }
-  li {
-    text-align: center;
-    margin-top: 20px;
-    a {
-      font-size: 20px;
-      color: black;
-    }
-  }
-  @media (max-width: $screen-xs-max) {
-    padding-bottom: 20px;
-    margin-bottom: 10px;
-    ul {
-      margin-top: 40px;
-    }
-  }
-}
-
-// イベント・店舗 共用
-
-@mixin responsive-img-size {
-  img {
-    max-height: 300px;
-    height: 70%;
-    width: 100%;
-  }
-  @media (min-width: $screen-sm-min) {
-    img {
-      height: 320px;
-    }
-  }
-  @media (min-width: $screen-md-min) {
-    img{
-      width: 420px;
-      height: 280px;
-    }
-  }
-}
-
-.img-area {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.text-area{
-  padding-top: 10px;
-  padding-bottom: 5px;
-}
-
-.share-area {
-  @media (min-width: $screen-md-min) {
-    text-align: left;
-    position: absolute;
-    bottom: 5px;
-    right: 20px;
-  }
-  * {
-    margin: 0 10px;
-    transition: all 1s ease;
-    &:hover {
-      transform: rotate(360deg);
-    }
-  }
-}
-
-@media (max-width: $screen-xs-max) {
-  .icon-area {
-    text-align: center;
-  }
-  .icon-area a {
-    margin: 0 5px;
-  }
-}
-
-@media (min-width: $screen-sm-min) {
-  .icon-area {
-    display: block;
-    position: absolute;
-    top: 3px;
-    right: 5px;
-  }
-  .icon-area {
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-  .icon-area a {
-    margin: 0 10px;
-  }
-}
-
-// shoplist
-#shop {
-  margin: 0 15px;
-  background-color: white;
-  margin-top: 30px;
-  margin-bottom: 60px;
-  padding: auto 20px;
-  @include responsive-img-size;
-  .shop-item-box {
-    margin-top: 20px;
-    height: 550px;
-  }
-  .shop-item { 
-    @include box-item;
-    position: relative;
-  }
-  .shop-name {
-    margin: {
-      top: 10px;
-      bottom: 10px;
-    }
-    @include b-line-buttom;
-    .text-area {
-      margin: 5px auto;
-    }
-  }
-  .share {
-    border-radius: 50%;
-    width: 35px;
-    height: 35px;
-    margin: 0 5px;
-    transition: all 1s ease;
-    &:hover {
-      transform: rotate(360deg);
-    }
-  }
-  p {
-    opacity: 0.8;
-  }
-}
-
-// envetlist
-#event {
-  @include responsive-img-size;
-  margin-top: 60px;
-  .event-item {
-    @include box-item;
-    position: relative;
-  }
-  h1,h2,h3,h4,h5,h6 {
-    margin: {
-      top: 5px;
-      bottom: 5px;
-    }
-  }
-  h3 {
-    @include b-line-buttom;
-  }
-  .event-name {
-    margin: {
-      top: 10px;
-      bottom: 10px;
-    }
-  }
-  .event-sub {
-    margin: 2px 0;
-  }
-  .event-img {
-    &:hover {
-      opacity: 0.8;
-    }
-  }
-  .share {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-  }
-}
-
-#detail {
-  padding-top: 70px;
-  max-width: 100%;
-  @media (min-width: $screen-sm-min) {
-    img {
-      position: center;
-      max-width: 50%;
-      max-height: 50%;
-    }
-  }
 }
 
 /* Small devices (tablets, 768px and up) */
