--- a/source/css/footer.scss
+++ b/source/css/footer.scss
@@ -45,3 +45,14 @@
     @include b-line-top;
   }
 }
+
+#asn {
+  padding-top: 20px;
+  h2 {
+    text-align: center;
+  }
+}
+
+#asn-share {
+  text-align: right;
+}
