--- a/source/css/base.scss
+++ b/source/css/base.scss
@@ -35,3 +35,19 @@ section{
   margin-top: 50px;
   margin-bottom: 50px;
 }
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: $screen-sm-min) {
+  body {
+    background-color: $back;
+    font-size: 14px;
+  }
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: $screen-md-min) {
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: $screen-lg-min) {
+}
