Add scss shop page

--- a/source/css/all.css.scss
+++ b/source/css/all.css.scss
@@ -13,19 +13,4 @@ $line: #EC6A47;
 @import "listpage";
 @import "shoplist";
 @import "eventlist";
-
-/* Small devices (tablets, 768px and up) */
-@media (min-width: $screen-sm-min) {
-  body {
-    background-color: $back;
-    font-size: 14px;
-  }
-}
-
-/* Medium devices (desktops, 992px and up) */
-@media (min-width: $screen-md-min) {
-}
-
-/* Large devices (large desktops, 1200px and up) */
-@media (min-width: $screen-lg-min) {
-}
+@import "shop"
