--- a/source/shoplist.slim
+++ b/source/shoplist.slim
@@ -13,8 +13,8 @@ section#shop
       - data.shop.each do |v|
         .shop-item-box.col-md-4
           .shop-item
-            a.img-area href="shop/#{ v.name }.html"
+            a.img-area href="../shop/#{ v.name }.html"
               == image_tag v.image, class: "img-responsive"
             .text-area
-              = link_to v.name, "shop/#{ v.name }.html", class: "shop-name"
+              == link_to v.name, "../shop/#{ v.name.gsub(/\s/,'') }.html", class: "shop-name"
               p = v.text
