--- a/source/css/all.css.scss
+++ b/source/css/all.css.scss
@@ -13,4 +13,5 @@ $line: #EC6A47;
 @import "_listpage";
 @import "_shoplist";
 @import "_eventlist";
-@import "_shop"
+@import "_shop";
+@import "_event";
