--- a/source/css/_event.scss
+++ b/source/css/_event.scss
@@ -8,6 +8,13 @@
   }
 }
 
+
+.event-a {
+  max-width: 700px;
+  margin: 40px auto;
+  text-align: center;
+}
+
 .event-name {
   font-size: 24px;
   border-bottom: solid 1px #eee;
@@ -16,4 +23,16 @@
 .envet-intro-text {
   border-top: 5px;
   line-height: 26px;
+}
+
+.event-local {
+  a {
+    font-size: 20px;
+    color: #32393D;
+  }
+}
+
+.table{
+  max-width: 500px;
+  margin: 0 auto;
 }
